--- a/custom_components/euskalmet/translations/eu.json
+++ b/custom_components/euskalmet/translations/eu.json
@@ -2,7 +2,7 @@
   "config": {
     "step": {
       "user": {
-        "title": "Euskalmet Hassio Konfigurazioa",
+        "title": "Euskalmet Konfigurazioa",
         "description": "Sartu zure Euskalmet kredentzialak",
         "data": {
           "fingerprint": "Fingerprint",
